重构了整个项目，可以正确释放LDAP连接
